# rsauth

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml
.github/workflows/: build-docker.yaml
rsauth/: Cargo.toml
rsauth/src/: extract.rs  internal.rs  lib.rs  role.rs  types.rs
rsauth/src/internal/: claims.rs  unixtime.rs
server/: Cargo.toml
server/migrations/2024-11-15-202650_initial_migration/: down.sql  up.sql
server/src/: cfg.rs  client_admin_role.rs  db.rs  db_models.rs  handler_proxy.rs  handlers.rs  main.rs  queries.rs  response.rs  schema.rs  state.rs  token.rs  types.rs
server/src/handlers/: authorise.rs  client_roles.rs  clients.rs  roles.rs
