[package]
name = "rsauth"
version = "0.1.0"
edition = "2021"

[features]
axum-extract = ["dep:axum", "dep:serde", "dep:time", "dep:tracing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7", default-features = false, features = ["json"], optional = true }
jsonwebtoken = "9.3"
serde = { version = "1.0", features = ["derive"], optional = true }
time = { version = "0.3", optional = true }
tracing = { version = "0.1", optional = true }
