[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
bb8 = "0.8"
config = "0.14"
diesel = { version = "2.2", features = ["postgres", "time"] }
diesel-async = { version = "0.5", features = ["postgres", "bb8"]}
diesel_migrations = { version = "2.2", features = ["postgres"] }
jsonwebtoken = "9.3"
rsauth = { path = "../rsauth", features = ["axum-extract"] }
serde = "1.0"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["compression-full", "decompression-full", "request-id", "sensitive-headers", "timeout", "trace", "validate-request", "util"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.11", features = ["v4"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
pq-sys = { version = "0.6", features = ["bundled"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] }
